--- a/Circolo Tennis/src/circolo/view/gestioneIscritti.fxml
+++ b/Circolo Tennis/src/circolo/view/gestioneIscritti.fxml
@@ -24,8 +24,7 @@
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button fx:id="visitaMedica" disable="true" mnemonicParsing="false" onAction="#handleVisita" text="Visita Medica" />
-            <Button fx:id="elimina" disable="true" mnemonicParsing="false" onAction="#handleElimina" text="Elimina" />
+            <Button fx:id="elimina" alignment="CENTER" contentDisplay="CENTER" disable="true" mnemonicParsing="false" onAction="#handleElimina" text="Elimina" />
                 <Button fx:id="modifica" disable="true" mnemonicParsing="false" onAction="#handleModifica" text="Modifica" />
             </buttons>
             <opaqueInsets>
@@ -57,7 +56,7 @@
         </TableView>
     </center>
    <top>
-      <AnchorPane prefHeight="142.0" prefWidth="998.0" styleClass="anchor" stylesheets="@background.css" BorderPane.alignment="CENTER">
+      <AnchorPane minHeight="-Infinity" prefHeight="150.0" prefWidth="998.0" styleClass="anchor" stylesheets="@background.css" BorderPane.alignment="CENTER">
          <children>
                  <Label alignment="CENTER" layoutX="-1.0" layoutY="19.0" prefHeight="17.0" prefWidth="90.0" text="Nome" textFill="WHITE">
                <opaqueInsets>
