--- a/Circolo Tennis/src/circolo/view/rootLayout.fxml
+++ b/Circolo Tennis/src/circolo/view/rootLayout.fxml
@@ -5,14 +5,15 @@
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.rootLayoutController">
+<BorderPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.rootLayoutController">
    <top>
       <ToolBar fx:id="logout" nodeOrientation="RIGHT_TO_LEFT" prefHeight="29.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <items>
             <Button maxHeight="-Infinity" mnemonicParsing="false" onAction="#handleLogout" prefHeight="5.0" text="Logout">
                <opaqueInsets>
                   <Insets />
-               </opaqueInsets></Button>
+               </opaqueInsets>
+            </Button>
          </items>
       </ToolBar>
    </top>
