--- a/Circolo Tennis/src/circolo/view/ProgramUI.fxml
+++ b/Circolo Tennis/src/circolo/view/ProgramUI.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<TabPane fx:id="tabPane" prefHeight="555.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.ProgramUIController">
+<TabPane fx:id="tabPane" prefHeight="555.0" prefWidth="1000.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.ProgramUIController">
   <tabs>
     <Tab fx:id="Iscritti" text="Gestione Iscritti" />
     <Tab fx:id="Prenotazioni" onSelectionChanged="#showGestionePrenotazioni" text="Gestione Prenotazioni" />
@@ -22,5 +22,6 @@
                </top>
             </BorderPane>
          </content></Tab>
+      <Tab fx:id="Strumenti" onSelectionChanged="#showStrumentiAmministratore" text="Strumenti Amministratore" />
   </tabs>
 </TabPane>
