--- a/Circolo Tennis/src/circolo/view/strumentiAmministratore.fxml
+++ b/Circolo Tennis/src/circolo/view/strumentiAmministratore.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.strumentiAmminstratoreController">
@@ -25,4 +26,7 @@
         </columns>
       </TableView>
    </center>
+   <top>
+      <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="150.0" prefWidth="1500.0" styleClass="anchor" stylesheets="@background.css" BorderPane.alignment="CENTER" />
+   </top>
 </BorderPane>
