--- a/Circolo Tennis/src/circolo/view/strumentiAmministratore.fxml
+++ b/Circolo Tennis/src/circolo/view/strumentiAmministratore.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.TableColumn?>
@@ -7,13 +8,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.strumentiAmminstratoreController">
+<BorderPane fx:id="pane" prefHeight="555.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="circolo.view.strumentiAmminstratoreController">
    <bottom>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <buttons>
-            <Button fx:id="modifica" mnemonicParsing="false" onAction="#handleModifica" text="Modifica" />
-            <Button fx:id="elimina" mnemonicParsing="false" onAction="#handleElimina" text="Elimina" />
+            <Button fx:id="modifica" disable="true" mnemonicParsing="false" onAction="#handleModifica" text="Modifica" />
+            <Button fx:id="elimina" disable="true" mnemonicParsing="false" onAction="#handleElimina" text="Elimina" />
         </buttons>
+         <BorderPane.margin>
+            <Insets right="10.0" />
+         </BorderPane.margin>
       </ButtonBar>
    </bottom>
    <center>
@@ -23,9 +27,15 @@
             <TableColumn fx:id="passwordCol" prefWidth="71.0" text="Password" />
             <TableColumn fx:id="tipoCol" prefWidth="111.0" text="Tipo Accesso" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
    </center>
    <top>
-      <AnchorPane fx:id="topPane" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="150.0" prefWidth="1500.0" styleClass="anchor" stylesheets="@background.css" BorderPane.alignment="CENTER" />
+      <AnchorPane fx:id="topPane" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="150.0" prefWidth="1500.0" styleClass="anchor" stylesheets="@background.css" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="934.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleNuovaIscrizione" text="Aggiungi nuovo utente" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="15.0" />
+         </children></AnchorPane>
    </top>
 </BorderPane>
